# ds323x-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  lcov.info
.github/workflows/: build.yml
ci/: script.sh
examples/: embedded_time_linux.rs  linux.rs  linux_alarm1.rs  linux_alarm2.rs
src/: ds3231.rs  ds3232.rs  ds3234.rs  ds323x.rs  embedded_time.rs  interface.rs  lib.rs
src/ds323x/: alarms.rs  configuration.rs  datetime.rs  mod.rs  status.rs
tests/: alarms.rs  configuration.rs  construction.rs  datetime.rs  ds3231.rs  ds3232.rs  ds3232_4.rs  ds3234.rs  ds323x.rs  status.rs
tests/common/: mod.rs
