[package]
name = "ds323x"
version = "0.6.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ds323x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the DS3231, DS3232 and DS3234 extremely accurate real-time clocks (RTC)."
readme = "README.md"
keywords = ["rtc", "clock", "real-time", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ds323x-rs"
documentation = "https://docs.rs/ds323x"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[features]
defmt = ["dep:defmt", "rtcc/defmt"]

[dependencies]
embedded-hal = "1.0.0"
rtcc = "0.3"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
embedded-hal-bus = "0.2"
linux-embedded-hal = "0.4.0"

[profile.release]
lto = true
